--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -12,9 +12,9 @@ background-size: cover;
     box-sizing: border-box;
 }
 
-.root {
+:root {
 --text-color: black;
---bg-url: url(./assets/bg-mobile-light.jpg)
+--bg-url: url(./assets/bg-mobile-light.jpg);
 --stroke-color: rgba(255, 255, 255, 0.5);
 --surface-color: rgba(255, 255, 255, 0,05);
 --surface-color-hover: rgba(0, 0, 0, 0.02);
@@ -24,8 +24,8 @@ background-size: cover;
 }
 
 .light {
-    --text-color: black;
-    --bg-url: url(./assets/bg-mobile-light.jpg)
+    --text-color: white;
+    --bg-url: url(./assets/bg-mobile-light.jpg);
     --stroke-color: rgba(0, 0, 0, 0.5);
     --surface-color: rgba(0, 0, 0, 0, 0,05);
     --surface-color-hover: rgba(0, 0, 0, 0.1);
@@ -35,6 +35,7 @@ background-size: cover;
 body {
     
     background: var(--bg-url) no-repeat top center/cover;
+    height: 100vh;
 }
 body * {
     font-family: "Inter", sans-serif;
@@ -101,7 +102,7 @@ width: 112px;
 }    
      
 
-ul{
+ul {
     list-style: none;
     flex-direction: column;
     gap: 16px;
@@ -168,4 +169,14 @@ ul li a {
         padding: 24px 0;
         text-align: center;
         font-size: 13PX;
+    }
+
+    @media (min-widht: 700px) {
+        :root {
+            --bg-url: url(./assets/bg-desktop.jpg);
+        }
+
+        .light {
+            --bg-url: url(./assets/bg-desktop-light.jpg);
+        }
     }
